--- a/pages/index.html
+++ b/pages/index.html
@@ -1,101 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <title>Title</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive Home Page</title>
+  <!-- <link rel="stylesheet" href="home.css"> -->
+  <link rel="stylesheet" href="../css/index.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a href="/index.html" class="navbar-brand">
-      <img  src="../images/logo.png" width="150px" style="margin-left: 50px;">
-    </a>
-    <a href="#quizweb" data-toggle="collapse" class="navbar-toggler">
-      <span class="navbar-toggler-icon"></span>
-    </a>
-    <div id="quizweb" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav justify-content-end" style="margin-left:1300px;">
-        <li class="nav-item"><a href="#te" class="nav-link" onload="login()" id="login" onclick="tologin()" style="color: white; font-size: 30px;margin-right: 50px;" >Login</a></li>
-        <li class="nav-item"><a href="#so" class="nav-link" onclick="toSign()" style="color: white; font-size: 30px;">Register</a></li>
+  <header>
+    <nav>
+      <a href="../pages/home.html" class="navbar-brand">
+        <img src="../images/logo.png" width="70px" style="margin-left: 0px; margin-top: 10px;">
+      </a>
+      <ul >
+        <li ><a onload="login()" onclick="tologin()" href="#te" class="nav-link" onload="login()" id="login"
+            onclick="tologin()" >Login</a></li>
+        <li><a id="regestrationbtn" onclick="toSign()" href="#so" class="nav-link" onclick="toSign()" >Register</a></li>
+
       </ul>
-    </div>
-  </nav>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-6">
-        <img id="img1" src="../images/img1.jpeg" >
-      </div>
-      <div class="col-sm-6">
-        <h1>AlphaSoft<br>Company</h1>
-      </div>
-    </div>
-  </div>
-  <div id="container"  class="container-fluid">
-    <div class="row">
-      <div class="col-sm-12" style="margin-top: 20px;">
-        <center>
-          <h2>Welcome</h2>
-          <h3  class="name"></h3>
-        </center>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <h3 id="h3">The brief of position</h3>
-        <p id="par">As a Full-Stack Web Developer, you will be
-          responsible for developing and maintaining web
-          applications and ensuring seamless integration<br> between the front-end and back-end systems.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <center>
-          <h3 id="h3a">Easy and intuitive <br> online testing</h3>
+    </nav>
+  </header>
 
-        </center>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <h3 id="h3b">Requirements of Quiz</h3>
-        <p class="par1">You should attempt to Quiz which contains three parts :</p>
-        <ul>
-          <li> IQ Test 25%</li>
-          <li>English Test 25%</li>
-          <li>Technical Test 50%</li>
-        </ul>
-        <p class="par1">Exam time: 20 minutes</p>
+  <div id="box">
+    <div class="text">
+      <h1 class="welcome"></h1>
+      <p id="name"></p>
+      <h2 class="instruction">Please read before start</h2>
+      <p class="exam">
+        As a Full-Stack Web Developer, you will be
+        responsible for developing and maintaining web
+        applications and ensuring seamless integration between the front-end and back-end systems.
+      </p>
 
-      </div>
-    </div>
-    <div class="row" style="display: flex; justify-content: center; align-items: center;">
-      <button id="bt" class="btn_Attempt_Quiz" onclick="checkin()">
-        Attempt Quiz
-      </button>
-    </div>
-  </div>
+      <p class="exam">
+        You should attempt to Quiz which contains three parts :
+        IQ Test 25%
+        English Test 25%
+        Technical Test 50%
+      </p>
 
-  <script src="../JS/index.js"></script>
+      <button id="strbtn" onclick="checkin()"> Attempt Quiz</button>
+    </div>
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+    <div id="backgroud">
+      <img class="imgbg" src="../images/Online test-rafiki.png" />
+      <footer id="footer">
+        <p>&copy; 2023 My Website. All rights reserved.</p>
+      </footer>
+
+      <script src="../JS/index.js"></script>
 </body>
 
 </html>
